[package]
name = "logmngr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcre2 = "0.2.3"
json = "0.12.4"
chrono = "0.4.22"
zstd = { version = "0.11.2", features = ["zstdmt"] }
rand = "0.8.5"
clap = { version = "3.2.20", features = ["derive"] }
chrono-english = "0.1.7"
rayon = "1.5.1"
linereader = "0.4.0"
memchr = "2.5.0"